Ciclo 2 - Testes